--- a/src/server/views/login.html
+++ b/src/server/views/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Login</h1>
-  <form action="/auth/login" method="post">
+  <form action="/login" method="post">
     <p><label>Email: <input type="email" name="email"/></label></p>
     <p><label>Password: <input type="password" name="password"/></label></p>
     <p><button type="submit">Log In</button></p>
